* Added Equity (Temp) account type, closed at year-end (Chris T)
* Added description field to transaction and invoice screens (Chris T)
* Removed ability to repost/delete transactions (Chris T)
* Partsgroups can now be nested though this is not yet used by LSMB (Chris T)
* Session expiration now with configurable behavior (Chris T)

Enhancing data integrity
* No longer allow NULL amounts in acc_trans (Chris T)

Installation/Upgrade
* PostgreSQL contrib dependencies removed, now require Pg 8.4 (Chris T)
* LaTeX format detection now run-time call, not configured (Chris T)

Code/API improvements
* scripts/* files moved to make inheritance possible (Chris T)
* Removed the Config::Std dependency and moved to Config::General (Chris T)
* Improved error handling using Try::Tiny and die (Chris T)
* Added "dynatable.html" template that can be included in templates (Chris T)
* Dynatable forms obtained through GET now show link back to form (Chris T)
* LedgerSMB->error and Form->error now show db version and company (Chris T)
* Simpler use of Log::Log4perl instead of LedgerSMB::Log (Chris T)
* Centralized database commit for new code (Chris T)

New RESTful Web Services Framework
* Supports XML and JSON as input formats
* Supports XML and JSON as output formats
* Supports read/write for Contacts:
   * Customers
   * Vendors
   * Employees
   * Leads
   * More

New Reporting Framework
* Easy bridge between SQL and display (Chris T)
* All reports exportable to CSV (Chris T)
* All reports exportable to PDF (Chris T)
* Unified UI for reports (Chris T)
* Enhanced trial balance allows for partial trial balance (Chris T)
* Enhanced trial balance allows for saved criteria (Chris T)
* New income-statement-like reports for customers and products (Chris T)
* New income-statement-like reports for invoices (Chris T)

Customer/Vendor/Employee Handling and CRM
* Added sales tax id and license number fields for companies (Chris T)
* Simpified database schema (Chris T)